--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_map: ^7.0.1
   latlong2: ^0.9.1
+  permission_handler: ^11.3.1
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
